# smash

./: lib.py  melee_env.py  new_training.ipynb  play.py  pyproject.toml  render.ipynb  requirements.txt  rollout.ipynb  train.py  training.ipynb  training.py
configs/: example_resume.json  example_train.json  gcpad_human.ini
smash_rl/: callbacks.py  environment.py  factory.py  play.py  rollout.py  runs.py  session.py  train.ipynb  train.py
smash_rl/analisi/: actions_and_observations.ipynb
smash_rl/specs/: __init__.py  actions.py  context.py  observations.py  rewards.py
smash_rl/tests/: helpers.py  test_callbacks.py  test_environment.py  test_factory.py  test_play.py  test_runs.py  test_session.py  test_specs.py  test_train_build.py  test_train_config.py  test_train_dolphin.py  test_video.py  test_video_dolphin.py
smash_rl/video/: __init__.py  compose.py  diagnostics.py  dump.py  panel.py
tb_logs/phase1_stationary_1/: events.out.tfevents.1783369064.luca-MS-7E26.514312.0
tb_logs/phase2_stationary_0/: events.out.tfevents.1783374379.luca-MS-7E26.1047917.0
