[project]
name = "smash_rl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "melee==0.47.2",            # fork vladfi1 (EXI inputs, FFW, blocking_input): pin esatto, il codice usa i suoi interni
    "stable-baselines3>=2.9",   # porta con sé torch
    "gymnasium>=1.0",
    "numpy",
    "python-dotenv",
    "PyVirtualDisplay",         # Xvfb per il training headless
    "psutil",
    "tensorboard",              # per i grafici di train.py (tb_logs/)
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ipykernel",                # per train.ipynb
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smash_rl*"]

[tool.pytest.ini_options]
# di default girano solo gli unit test; quelli che avviano Dolphin: pytest -m dolphin
addopts = "-m 'not dolphin'"
markers = [
    "dolphin: test di integrazione che avviano Dolphin (lenti, richiedono .env/ISO)",
]
filterwarnings = [
    # libmelee (SlippstreamClient) forka il processo enet mentre il thread del
    # watchdog è vivo: inevitabile col design attuale e a basso rischio (il
    # watchdog aspetta solo su un Event, non tiene lock)
    'ignore:This process \(pid=\d+\) is multi-threaded:DeprecationWarning',
]